updated portfolio with all projects and link updates

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                 <li class="sidebar-brand"><a href="#page-top">Maya Ellington</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <ul>
-                    <li class="sidebar-nav-item"><a  href="assets/doc/Maya_Ellington_Resume_042422.pdf">Resume</a></li>
-                </ul>
+                <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1soG-U-YW6i0Lm_5kxqaAtVV4SXJtBqEI/view?usp=sharing">Resume</a></li>
                 <li class="sidebar-nav-item"><a href="#se-projects">Software Engineering Projects</a></li>
                 <li class="sidebar-nav-item"><a href="#gis-projects">GIS Projects</a></li>
                 <li class="sidebar-nav-item"><a href="#contact-me">Contact</a></li>
@@ -62,7 +60,7 @@
                         <p class="lead mb-5">
                              Collaborative, focused, and organized with a passion for problem solving. I am interested in finding solutions to technical, organizational, environmental, and geospatial challenges. 
                         </p>
-                        <a class="btn btn-dark btn-xl" href="assets/doc/Maya_Ellington_Resume_042422.pdf">View My Resume</a>
+                        <a class="btn btn-dark btn-xl" href="https://drive.google.com/file/d/1soG-U-YW6i0Lm_5kxqaAtVV4SXJtBqEI/view?usp=sharing">View My Resume</a>
                     </div>
                 </div>
             </div>
@@ -98,25 +96,25 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/benorloff/cosmos-app">
                             <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Django Project [placeholder]</div>
-                                    <p class="mb-0">Collaborateive group project built using Python and Django framework.</p>
+                                <div class="caption-content" style="margin: auto 4rem 12rem;">
+                                    <div class="h2">Cosmos</div>
+                                    <p class="mb-0">Collaborateive group project for a social astronomical events app built in Python and Django.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/django-final.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/cosmos2.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/virtual-luna/sun-catcher">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">React Project [placeholder]</div>
-                                    <p class="mb-0">Built utilizing React.</p>
+                                    <div class="h2">SunCatcher</div>
+                                    <p class="mb-0">Built utilizing React, Express, Node.js, and MongoDB/Mongoose.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/react-final.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/suncatcher.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -131,11 +129,11 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Spatial Analysis of High Risk Wildfire Tree Removal Locations</div>
-                                    <p class="mb-0">Developed a GIS for a client to identified high risk post-burn tree locations based on factors such as proximity to waterways, slope, and other sensitive natural resources.</p>
+                                    <p class="mb-0">Developed a GIS for a client to identified high risk post-burn tree locations based on factors such as proximity to waterways, slope, and other sensitive natural resources. [Sensitive data, protected per client contract]</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/spatial-analysis-tree.jpg" alt="..." />
