--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="sidebar-brand"><a href="#page-top">Maya Ellington</a></li>
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#about">About</a></li>
-        <!-- <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1bTCtvMYkgnU6Ldf5Igabb2CGe-Zb-nvd/view?usp=sharing">Resume</a></li> -->
+        <!-- <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1AoPZmhQnyRv7w4pMotM6xjDGcHqGqEDW/view?usp=sharing">Resume</a></li> -->
         <li class="sidebar-nav-item">
           <a href="#se-projects">Software Engineering Projects</a>
         </li>
@@ -95,7 +95,7 @@
             </p>
             <a
               class="btn btn-dark btn-xl"
-              href="https://drive.google.com/file/d/1bTCtvMYkgnU6Ldf5Igabb2CGe-Zb-nvd/view?usp=sharing"
+              href="https://drive.google.com/file/d/1AoPZmhQnyRv7w4pMotM6xjDGcHqGqEDW/view?usp=sharing"
               >View My Resume</a
             >
           </div>
@@ -113,7 +113,7 @@
           <div class="col-lg-6">
             <a
               class="portfolio-item"
-              href="https://github.com/virtual-luna/Project1-Mancala"
+              href="https://github.com/mayaellington/Project1-Mancala"
             >
               <div class="caption">
                 <div class="caption-content" style="margin-bottom: 7rem">
@@ -129,7 +129,7 @@
           <div class="col-lg-6">
             <a
               class="portfolio-item"
-              href="https://github.com/virtual-luna/Project-2-Fullstack-CRUD"
+              href="https://github.com/mayaellington/Project-2-Fullstack-CRUD"
             >
               <div class="caption">
                 <div class="caption-content">
@@ -157,7 +157,7 @@
                 <div class="caption-content" style="margin: auto 4rem 12rem">
                   <div class="h2">Cosmos</div>
                   <p class="mb-0">
-                    Collaborateive group project for a social astronomical
+                    Collaborative group project for a social astronomical
                     events app built in Python and Django.
                   </p>
                 </div>
@@ -168,7 +168,7 @@
           <div class="col-lg-6">
             <a
               class="portfolio-item"
-              href="https://github.com/virtual-luna/sun-catcher"
+              href="https://github.com/mayaellington/sun-catcher"
             >
               <div class="caption">
                 <div class="caption-content">
