--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </p>
             <a
               class="btn btn-dark btn-xl"
-              href="https://drive.google.com/file/d/1AoPZmhQnyRv7w4pMotM6xjDGcHqGqEDW/view?usp=sharing"
+              href="https://drive.google.com/file/d/13j8r_sEaqg1jK0KRWX-RSkbGyV3zPXOK/view?usp=share_link"
               >View My Resume</a
             >
           </div>
@@ -157,8 +157,8 @@
                 <div class="caption-content" style="margin: auto 4rem 12rem">
                   <div class="h2">Cosmos</div>
                   <p class="mb-0">
-                    Collaborative group project for a social astronomical
-                    events app built in Python and Django.
+                    Collaborative group project for a social astronomical events
+                    app built in Python and Django.
                   </p>
                 </div>
               </div>
