update gis project link and rearrange portfolio order

--- a/index.html
+++ b/index.html
@@ -102,6 +102,105 @@
         </div>
       </div>
     </section>
+     <!-- GIS Portfolio-->
+     <section class="content-section" id="gis-projects">
+      <div class="container px-4 px-lg-5">
+        <div class="content-section-heading text-center">
+          <h3 class="text-secondary mb-0">Portfolio</h3>
+          <h2 class="mb-5">GIS Projects</h2>
+        </div>
+        <div class="row gx-0">
+          <div class="col-lg-6">
+            <a class="portfolio-item">
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">
+                    Spatial Analysis of High Risk Wildfire Tree Removal
+                    Locations
+                  </div>
+                  <p class="mb-0">
+                    Developed a GIS for a client to identified high risk
+                    post-burn tree locations based on factors such as proximity
+                    to waterways, slope, and other sensitive natural resources.
+                    [Sensitive data, protected per client contract]
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/spatial-analysis-tree.jpg"
+                alt="..."
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://issuu.com/designandsocialmovements/docs/aemp_cp_web/276"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Anti-Eviction Mapping Project</div>
+                  <p class="mb-0">
+                    Contributed stormwater/sewage map figures for the
+                    Counterpoints: An San Francisco Bay Area Atlas of
+                    Displacement & Resistance publication.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/counterpoints.jpg"
+                alt="..."
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://drive.google.com/file/d/1NPFpD1VR2l6a06eaJpzDGT8p21iDW_gK/view?usp=sharing"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Spatial Analysis of Vineyard Relocation</div>
+                  <p class="mb-0">
+                    Raster/Vector-Based Analysis and Network Analysis conducted
+                    to identify most suitable region for relocation of a
+                    vineyard damaged by wildfire.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/suitability-vineyard.jpg"
+                alt="..."
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://deltacouncil.ca.gov/pdf/council-meeting/meeting-materials/2021-06-26-June-2021-Delta-Adapts-Vulnerability-Assessment.pdf"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">Delta Climate Vulnerability Assessment</div>
+                  <p class="mb-0">
+                    Contributed to GIS data management and analysis for Delta
+                    Stewardship Council's Climate Vulnerability Assessment.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/delta-adapts1.jpg"
+                alt="..."
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- SE Portfolio-->
     <section class="content-section" id="se-projects">
       <div class="container px-4 px-lg-5">
@@ -182,105 +281,6 @@
               <img
                 class="img-fluid"
                 src="assets/img/suncatcher.jpg"
-                alt="..."
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- GIS Portfolio-->
-    <section class="content-section" id="gis-projects">
-      <div class="container px-4 px-lg-5">
-        <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">GIS Projects</h2>
-        </div>
-        <div class="row gx-0">
-          <div class="col-lg-6">
-            <a class="portfolio-item">
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">
-                    Spatial Analysis of High Risk Wildfire Tree Removal
-                    Locations
-                  </div>
-                  <p class="mb-0">
-                    Developed a GIS for a client to identified high risk
-                    post-burn tree locations based on factors such as proximity
-                    to waterways, slope, and other sensitive natural resources.
-                    [Sensitive data, protected per client contract]
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/spatial-analysis-tree.jpg"
-                alt="..."
-              />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://issuu.com/designandsocialmovements/docs/aemp_cp_web/276"
-            >
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">Anti-Eviction Mapping Project</div>
-                  <p class="mb-0">
-                    Contributed stormwater/sewage map figures for the
-                    Counterpoints: An San Francisco Bay Area Atlas of
-                    Displacement & Resistance publication.
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/counterpoints.jpg"
-                alt="..."
-              />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="assets/doc/Suitability_Analysis_Vineyard.pdf"
-            >
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">Spatial Analysis of Vineyard Relocation</div>
-                  <p class="mb-0">
-                    Raster/Vector-Based Analysis and Network Analysis conducted
-                    to identify most suitable region for relocation of a
-                    vineyard damaged by wildfire.
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/suitability-vineyard.jpg"
-                alt="..."
-              />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://deltacouncil.ca.gov/pdf/council-meeting/meeting-materials/2021-06-26-June-2021-Delta-Adapts-Vulnerability-Assessment.pdf"
-            >
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">Delta Climate Vulnerability Assessment</div>
-                  <p class="mb-0">
-                    Contributed to GIS data management and analysis for Delta
-                    Stewardship Council's Climate Vulnerability Assessment.
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/delta-adapts1.jpg"
                 alt="..."
               />
             </a>
