update resume and nav bar order

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <li class="sidebar-nav-item"><a href="#about">About</a></li>
         <!-- <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1AoPZmhQnyRv7w4pMotM6xjDGcHqGqEDW/view?usp=sharing">Resume</a></li> -->
         <li class="sidebar-nav-item">
-          <a href="#se-projects">Software Engineering Projects</a>
+          <a href="#gis-projects">GIS Projects</a>
         </li>
         <li class="sidebar-nav-item">
-          <a href="#gis-projects">GIS Projects</a>
+          <a href="#se-projects">Software Engineering Projects</a>
         </li>
         <li class="sidebar-nav-item"><a href="#contact-me">Contact</a></li>
       </ul>
@@ -95,15 +95,15 @@
             </p>
             <a
               class="btn btn-dark btn-xl"
-              href="https://drive.google.com/file/d/13j8r_sEaqg1jK0KRWX-RSkbGyV3zPXOK/view?usp=share_link"
+              href="https://drive.google.com/file/d/1Szil5Uk8QJxOn7vQHAsqPwpBs4W-HeZg/view?usp=sharing"
               >View My Resume</a
             >
           </div>
         </div>
       </div>
     </section>
-     <!-- GIS Portfolio-->
-     <section class="content-section" id="gis-projects">
+    <!-- GIS Portfolio-->
+    <section class="content-section" id="gis-projects">
       <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Portfolio</h3>
