--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="sidebar-brand"><a href="#page-top">Maya Ellington</a></li>
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#about">About</a></li>
-        <!-- <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1AoPZmhQnyRv7w4pMotM6xjDGcHqGqEDW/view?usp=sharing">Resume</a></li> -->
+        <!-- <li class="sidebar-nav-item"><a  href="https://drive.google.com/file/d/1qRafLibzNsetXQ5C6Zs71VXlDwrctoqw/view?usp=sharing">Resume</a></li> -->
         <li class="sidebar-nav-item">
           <a href="#gis-projects">GIS Projects</a>
         </li>
@@ -62,7 +62,7 @@
           <li class="list-inline-item">
             <a
               class="social-link text-white mr-3"
-              href="https://github.com/mayaellington"
+              href="https://github.com/maya-ellington"
               ><i class="fab fa-github"></i
             ></a>
           </li>
@@ -88,16 +88,140 @@
               A Software Engineer with a background in GIS analysis,
               environmental protection, and regulatory compliance.
             </h2>
-            <p class="lead mb-5">
+            <p class="lead mb-3">
               Collaborative, focused, and organized with a passion for problem
               solving. I am interested in finding solutions to technical,
               organizational, environmental, and geospatial challenges.
             </p>
+            <p class="lead mb-5">
+              My tech stack specialties include Javascript, Typescript, Vue,
+              React, and Python/Django Rest Framework.
+            </p>
             <a
               class="btn btn-dark btn-xl"
-              href="https://drive.google.com/file/d/1Szil5Uk8QJxOn7vQHAsqPwpBs4W-HeZg/view?usp=sharing"
+              href="https://drive.google.com/file/d/1LRgik5LYrLByN1PMk_zz6_FAUk-v8nnU/view?usp=sharing"
               >View My Resume</a
             >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- SE Portfolio-->
+    <section class="content-section" id="se-projects">
+      <div class="container px-4 px-lg-5">
+        <div class="content-section-heading text-center">
+          <h3 class="text-secondary mb-0">Portfolio</h3>
+          <h2 class="mb-5">Software Engineering Projects</h2>
+        </div>
+        <div class="row gx-0">
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://laconicglobal.com/sadar/"
+            >
+              <div class="caption">
+                <div class="caption-content" style="margin-bottom: 7rem">
+                  <div class="h2">SADAR</div>
+                  <p class="mb-0">
+                    A full-stack environmental resource analysis application that delivered data through graphical and geospatial visuals, utilizing Django/Vue/Mapbox GL JS.
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/sadar1.png" alt="..." />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://exploregis.lofty.codes/"
+            >
+              <div class="caption">
+                <div class="caption-content" style="margin-bottom: 7rem">
+                  <div class="h2">Explore GIS</div>
+                  <p class="mb-0">
+                    An educational web application to teach users about fundamentals of GIS concepts.
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/explore-gis1.png" alt="..." />
+            </a>
+          </div>
+        <div class="row gx-0">
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://github.com/mayaellington/Project1-Mancala"
+            >
+              <div class="caption">
+                <div class="caption-content" style="margin-bottom: 7rem">
+                  <div class="h2">Mancala</div>
+                  <p class="mb-0">
+                    A boardgame built with HTML5/CSS3/Vanilla Javascript.
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/mancala-1.jpg" alt="..." />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://github.com/mayaellington/Project-2-Fullstack-CRUD"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">RoadTripper</div>
+                  <p class="mb-0">
+                    An interactive road trip map built using Express, Node.js,
+                    MongoDB/Mongoose, Mapbox GL JS API and MapQuest Geocoder
+                    API.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/roadtripper1.png"
+                alt="..."
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://github.com/benorloff/cosmos-app"
+            >
+              <div class="caption">
+                <div class="caption-content" style="margin: auto 4rem 12rem">
+                  <div class="h2">Cosmos</div>
+                  <p class="mb-0">
+                    Collaborative group project for a social astronomical events
+                    app built in Python and Django.
+                  </p>
+                </div>
+              </div>
+              <img class="img-fluid" src="assets/img/cosmos2.jpg" alt="..." />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a
+              class="portfolio-item"
+              href="https://github.com/mayaellington/sun-catcher"
+            >
+              <div class="caption">
+                <div class="caption-content">
+                  <div class="h2">SunCatcher</div>
+                  <p class="mb-0">
+                    Built utilizing React, Express, Node.js, and
+                    MongoDB/Mongoose.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="assets/img/suncatcher.jpg"
+                alt="..."
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -201,93 +325,6 @@
         </div>
       </div>
     </section>
-    <!-- SE Portfolio-->
-    <section class="content-section" id="se-projects">
-      <div class="container px-4 px-lg-5">
-        <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">Software Engineering Projects</h2>
-        </div>
-        <div class="row gx-0">
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://github.com/mayaellington/Project1-Mancala"
-            >
-              <div class="caption">
-                <div class="caption-content" style="margin-bottom: 7rem">
-                  <div class="h2">Mancala</div>
-                  <p class="mb-0">
-                    A boardgame built with HTML5/CSS3/Vanilla Javascript.
-                  </p>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/img/mancala-1.jpg" alt="..." />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://github.com/mayaellington/Project-2-Fullstack-CRUD"
-            >
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">RoadTripper</div>
-                  <p class="mb-0">
-                    An interactive road trip map built using Express, Node.js,
-                    MongoDB/Mongoose, Mapbox GL JS API and MapQuest Geocoder
-                    API.
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/roadtripper1.png"
-                alt="..."
-              />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://github.com/benorloff/cosmos-app"
-            >
-              <div class="caption">
-                <div class="caption-content" style="margin: auto 4rem 12rem">
-                  <div class="h2">Cosmos</div>
-                  <p class="mb-0">
-                    Collaborative group project for a social astronomical events
-                    app built in Python and Django.
-                  </p>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/img/cosmos2.jpg" alt="..." />
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a
-              class="portfolio-item"
-              href="https://github.com/mayaellington/sun-catcher"
-            >
-              <div class="caption">
-                <div class="caption-content">
-                  <div class="h2">SunCatcher</div>
-                  <p class="mb-0">
-                    Built utilizing React, Express, Node.js, and
-                    MongoDB/Mongoose.
-                  </p>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/suncatcher.jpg"
-                alt="..."
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
     <!-- Call to Action-->
     <section class="content-section bg-primary text-white" id="contact-me">
       <div class="container px-4 px-lg-5 text-center">
@@ -302,7 +339,7 @@
               ></i>
             </span>
           </a>
-          <a href="https://github.com/mayaellington">
+          <a href="https://github.com/maya-ellington">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x" style="color: white"></i>
               <i class="fab fab fa-github fa-stack-1x" style="color: black"></i>
